base/002-analytics/fuse-002-analytics-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata: 
  creationTimestamp: ~
  labels: 
    app: analytics
  name: analytics
spec: 
  replicas: 3
  selector: 
    matchLabels: 
      app: analytics
  strategy: {}
  template: 
    metadata: 
      creationTimestamp: ~
      labels: 
        app: analytics
    spec: 
      containers: 
        - 
 - name: spring.datasource.url
              valueFrom:
                secretKeyRef:
                  name: ocp-dev-secrets
                  key: SPRING_DATASOURCE_URL_DEV_ANALYTICS
            - name: spring.datasource.username
              valueFrom:
                secretKeyRef:
                  name: ocp-dev-secrets
                  key: SPRING_DATASOURCE_USER
            - name: spring.datasource.password
              valueFrom:
                secretKeyRef:
                  name: ocp-dev-secrets
                  key: SPRING_DATASOURCE_PASSWD
            - name: spring.data.elasticsearch.client.reactive.endpoints
              valueFrom:
                secretKeyRef:
                  name: ocp-dev-secrets
                  key: SPRING_DATA_ELASTICSEARCH_CLIENT_REACTIVE_ENDPOINTS
            - name: spring.rabbitmq.addresses
              valueFrom:
                secretKeyRef:
                  name: ocp-dev-secrets
                  key: SPRING_RABBITMQ_ADDRESS
            - name: spring.rabbitmq.password
              valueFrom:
                secretKeyRef:
                  name: ocp-dev-secrets
                  key: SPRING_RABBITMQ_PASSWD
            - name: spring.rabbitmq.username
              valueFrom:
                secretKeyRef:
                  name: ocp-dev-secrets
                  key: SPRING_RABBITMQ_USER
            - name: spring.elasticsearch.rest.uris
              valueFrom:
                secretKeyRef:
                  name: ocp-dev-secrets
                  key: SPRING_ELASTICSEARCH_REST_URIS
            - name: mdo.config.jwt_rsk
              valueFrom:
                secretKeyRef:
                  name: ocp-dev-secrets
                  key: MDO_CONFIG_JWT_RSK
            - name: grpc.crud.address.port
              value: '10000'
            - name: management.health.default-enabled
              valueFrom:
                secretKeyRef:
                  name: ocp-dev-secrets
                  key: MANAGEMENT_HEALTH_DEFAULTS_ENABLED
            - name: management.endpoint.health.group.alb.include
              valueFrom:
                secretKeyRef:
                  name: ocp-dev-secrets
                  key: MANAGEMENT_ENDPOINT_HEALTH_GROUP_ALB_INCLUDE
            - name: management.endpoint.health.group.alb.show-components
              valueFrom:
                secretKeyRef:
                  name: ocp-dev-secrets
                  key: MANAGEMENT_ENDPOINT_HEALTH_GROUP_ALB_SHOW-COMPONENTS
            - name: management.endpoint.health.group.alb.show-details
              valueFrom:
                secretKeyRef:
                  name: ocp-dev-secrets
                  key: MANAGEMENT_ENDPOINT_HEALTH_GROUP_ALB_SHOW-DETAILS
            - name: management.health.group.alb.defaults.enabled
              valueFrom:
                secretKeyRef:
                  name: ocp-dev-secrets
                  key: MANAGEMENT_HEALTH_GROUP_ALB_DEFAULTS_ENABLED
            - name: server.canonical.url
              valueFrom:
                secretKeyRef:
                  name: ocp-dev-secrets
                  key: SERVER_CANONICAL_URL_IN_ANALYTICS
            - name: server.name
              valueFrom:
                secretKeyRef:
                  name: ocp-dev-secrets
                  key: SERVER_NAME
            - name: management.endpoint.health.show-details
              valueFrom:
                secretKeyRef:
                  name: ocp-dev-secrets
                  key: MANAGEMENT_ENDPOINT_HEALTH_SHOW-DETAILS
            - name: spring.rabbitmq.host
              valueFrom:
                secretKeyRef:
                  name: ocp-dev-secrets
                  key: SPRING_RABBITMQ_HOST
            - name: spring.rabbitmq.port
              valueFrom:
                secretKeyRef:
                  name: ocp-dev-secrets
                  key: SPRING_RABBITMQ_PORT
            - name: grpc.core.ui.server.url
              value: "null"
            - name: grpc.core.ui.server.port
              value: '10000'
            - name: mdo.message.host
              valueFrom:
                secretKeyRef:
                  name: ocp-dev-secrets
                  key: MDO_MESSAGE_HOST
            - name: mdo.message.port
              valueFrom:
                secretKeyRef:
                  name: ocp-dev-secrets
                  key: MDO_MESSAGE_PORT
            - name: mdo.message.username
              valueFrom:
                secretKeyRef:
                  name: ocp-dev-secrets
                  key: MDO_MESSAGE_USERNAME
            - name: mdo.message.password
              valueFrom:
                secretKeyRef:
                  name: ocp-dev-secrets
                  key: MDO_MESSAGE_PASSWORD
            - name: mdo.message.from
              valueFrom:
                secretKeyRef:
                  name: ocp-dev-secrets
                  key: MDO_MESSAGE_FROM
            - name: mdo.message.isTls
              valueFrom:
                secretKeyRef:
                  name: ocp-dev-secrets
                  key: MDO_MESSAGE_ISTLS
            - name: elastic.link
              valueFrom:
                secretKeyRef:
                  name: ocp-dev-secrets
                  key: ELASTIC_LINK
            - name: elastic.username
              valueFrom:
                secretKeyRef:
                  name: ocp-dev-secrets
                  key: ELASTIC_USERNAME
            - name: elastic.password
              valueFrom:
                secretKeyRef:
                  name: ocp-dev-secrets
                  key: ELASTIC_PASSWORD
            - name: NEW_RELIC_APP_NAME
              valueFrom:
                secretKeyRef:
                  name: ocp-dev-secrets
                  key: SERVER_CANONICAL_URL_IN_ANALYTICS
            - name: NEW_RELIC_LICENSE_KEY
              valueFrom:
                secretKeyRef:
                  name: ocp-dev-secrets
                  key: NEWRELIC_LICENSE_KEY
            - name: spring.datasource.driverClassName
              value: org.postgresql.Driver
            - name: server.max-http-header-size
              value: 512KB
            - name: spring.datasource.hikari.connection-timeout
              value: '20000'
            - name: spring.datasource.hikari.minimum-idle
              value: '1'
            - name: spring.datasource.hikari.maximum-pool-size
              value: '10'
            - name: spring.datasource.hikari.idleTimeout
              value: '30000'
            - name: elastic.protocol
              value: https
            - name: elastic.port
              value: '9200'
          securityContext:
            privileged: false
          imagePullPolicy: IfNotPresent
          terminationMessagePolicy: File
          image: "docker.prospecta.com/prospecta/mdo-analytics:development"
          name: analytics
          ports:
            - name: spring-port
              containerPort: 8080
              protocol: TCP
          resources: {}
      securityContext: {}
      imagePullSecrets:
        - name: nexus-image-pull
---
